test/message/vm_dont_display_runtime_error.out
beginning
middle
test.vm:1
throw new Error("boo!")
^
Error: boo!
    at test.vm:1:7
    at ContextifyScript.Script.runInThisContext (vm.js:*)
    at Object.exports.runInThisContext (vm.js:*)
    at Object.<anonymous> (*test*message*vm_dont_display_runtime_error.js:*)
    at Module._compile (module.js:*)
    at Object.Module._extensions..js (module.js:*)
    at Module.load (module.js:*)
    at tryModuleLoad (module.js:*:*)
    at Function.Module._load (module.js:*)
    at Module.runMain (module.js:*)
